# humanizer-autoresearch

./: README.md  prepare.py  program.md  pyproject.toml  setup.sh  train.py
