[project]
name = "humanizer-autoresearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "sentence-transformers>=3.2.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.26.0",
    "trl>=0.12.0",
    "einops>=0.8.0",
]

[tool.uv]
dev-dependencies = []
